Fixed text alignment in skill networks by adding vertical align property to images.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -60,13 +60,14 @@
 .rep-link {
   display: block;
   margin: 0 50px 0 0;
-  padding: 4px 12px 0 6px;
+  padding: 6px 12px 6px 6px;
   box-shadow: inset 0 0 12px -3px black;
   border-radius: 10px;
   transition: box-shadow 0.25s ease-in-out;
   img {
     width: 50px;
     height: 50px;
+    vertical-align: bottom;
   }
   .flex-link {
     display: flex;
